--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,10 @@
 {
-	"id": "sample-plugin",
-	"name": "Sample Plugin",
+	"id": "comprehending-obsidian",
+	"name": "Comprehending Obsidian",
 	"version": "1.0.0",
 	"minAppVersion": "0.15.0",
-	"description": "Demonstrates some of the capabilities of the Obsidian API.",
-	"author": "Obsidian",
-	"authorUrl": "https://obsidian.md",
-	"fundingUrl": "https://obsidian.md/pricing",
-	"isDesktopOnly": false
+	"description": "Uses AWS comprehend semantic analysic to analyse and visualise the content of obsidian notes.",
+	"author": "James Ledger",
+	"fundingUrl": "https://ko-fi.com/jamesledger",
+	"isDesktopOnly": true
 }
